--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="normalize/normalize.css" />
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 	<link href='http://fonts.googleapis.com/css?family=Romanesco' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/app.css" />
+	<link rel="stylesheet" href="css/app.css" type='text/css'/>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
