--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Listomatic</title>
+	<title>Journal App</title>
 	<!-- Not present in the tutorial. Just for basic styling. -->
 	<link rel="stylesheet" href="normalize/normalize.css" />
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
